--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -7,7 +7,7 @@ name: Deploy to Firebase Hosting on merge
     branches:
       - master
 env:
-  REACT_APP_KAKAOMAP_API: ${{ secrets.REACT_APP_KAKAOMAP_API }}
+  REACT_APP_KAKAOMAP_API: '${{ secrets.REACT_APP_KAKAOMAP_API }}'
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
