--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.23",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
