--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "더존 빵돌이",
-  "name": "더존 빵돌이",
+  "name": "더존 빵돌이 - 더존비즈온 식단과 통근 버스 실시간 도착 시간 안내",
   "icons": [
     {
       "src": "favicon.ico",
