--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -3,6 +3,9 @@
 
 name: Deploy to Firebase Hosting on PR
 'on': pull_request
+env:
+  REACT_APP_KAKAOMAP_API: '${{ secrets.REACT_APP_KAKAO_API_KEY }}'
+  REACT_APP_KAKAOMAP_API: '${{ REACT_APP_PUBLIC_OPEN_API_ENCODING_KEY }}'
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
