--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,6 +6,9 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - master
+env:
+  REACT_APP_KAKAO_API_KEY: '${{ secrets.REACT_APP_KAKAO_API_KEY }}'
+  REACT_APP_PUBLIC_OPEN_API_ENCODING_KEY: '${{ secrets.REACT_APP_PUBLIC_OPEN_API_ENCODING_KEY }}'
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
