splash Emg test

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "더존 빵돌이",
   "name": "더존 빵돌이 - 더존비즈온 식단과 통근 버스 실시간 도착 시간 안내",
+  "description": "더존비즈온 구내식당 식단과 통근 버스의 실시간 도착 시간을 안내하는 더존 빵돌이 웹 서비스입니다.",
   "icons": [
     {
       "src": "favicon.ico",
