--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "styled-reset": "^4.4.5",
