--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "더존 빵돌이",
-  "name": "더존 빵돌이 | 다양한 더존ICT 생활 정보",
-  "description": "더존ICT의 구내식당 식단, 통근 버스의 실시간 도착 시간, 오늘의 빵, 사내 카페 메뉴, 날씨 등 다양한 생활 정보를 안내하는 더존 빵돌이 웹 서비스입니다.",
+  "name": "더존 빵돌이 - 더존ICT 식단과 통근 버스 실시간 도착 시간 안내",
+  "description": "더존ICT 구내식당 식단과 통근 버스의 실시간 도착 시간을 안내하는 더존 빵돌이 웹 서비스입니다.",
   "icons": [
     {
       "src": "favicon.ico",
