--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "react-snap": "^1.23.0",
     "styled-reset": "^4.4.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -38,17 +37,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postbuild": "react-snap"
-  },
-  "reactSnap": {
-    "include": [
-      "/",
-      "/meal",
-      "/cafe",
-      "/omakase",
-      "/bus"
-    ]
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
