--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.71.1",
+    "styled-components": "^6.1.8",
     "styled-reset": "^4.4.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
