--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.5",
     "classnames": "^2.3.2",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.0",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
